--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 body {
-  margin: 0;
+  display: grid;
+  grid-template: repeat(4, 70vh)/repeat(1, 100vw);
+  grid-gap: 5px;
+  margin: 0 auto;
   padding: 0;
-  background-color: #f7f7f7;
+  /* background-color: #f7f7f7; */
+  /* background-color: #CAC8C9; */
   font-family: helvetica;
 }
 
@@ -12,6 +16,7 @@ h1, h2 {
 
 nav {
   position: fixed;
+  top: 0;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -24,7 +29,7 @@ nav a {
   color: #323643;
   padding: 10px 5px;
   letter-spacing: 3px;
-  margin: 10px 40px;
+  margin: 10px 100px;
   border: 1px solid transparent;
 }
 
@@ -37,206 +42,113 @@ nav a:hover {
 /* Header */
 
 header {
-  display: grid;
-  grid-template: repeat(12, 1fr)/repeat(12, 1fr);
-  width: 100vw;
-  height: 100vh;
-  margin: 0 auto;
-  padding: 0;
-  border: 1px solid red;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 98%, 0% 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 98%, 0% 100%);
-}
-
-.bg-box {
-  grid-area: 1/1/13/7;
+  grid-area: 1/1/2/2;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url('background3.jpg') no-repeat center center fixed;
-  background-size: cover;
-}
-
-.bg-box2 {
-  grid-area: 1/7/13/13;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  background: url('https://cftaft.com/wp-content/uploads/2016/03/white-background-wallpaper-2956247.jpg') no-repeat center center;
-  background-size: cover;
-}
-
-.name {
-  grid-area: 3/1/5/7;
-  display: flex;
+  flex-direction: column;
   justify-content: flex-end;
-  align-items: flex-start;
-  /* background-color: rgba(50, 50, 50, .5); */
-  /* border: 1px solid yellow; */
-}
-
-.name h1 {
-  font-size: 60px;
-  color: #f7f7f7;
-  line-height: 80%;
-}
-
-.left-box {
-  grid-area: 1/1/13/7;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  z-index: 10;
+  text-align: center;
+}
+
+.bg {
+  height: 500px;
+  position: absolute;
+  width: 80%;
+  background: url('background3.jpg') no-repeat center fixed;
+  background-size: cover;
+  z-index: -1;
+  border: 1px solid red;
+  top: -100px;
+}
+
+header h1 {
+  text-transform: uppercase;
+  font-size: 50px;
+}
+
+header span {
+  font-weight: bold;
+  color: #EA9215;
 }
 
 .pic {
-  margin-left: 100px;
-  width: 350px;
-  height: 350px;
-  object-position: center;
+  width: 500px;
+  height: auto;
+  margin-bottom: -65px;
+  /* object-position: center;
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 50%; */
   /* border: 1px solid #323643; */
-  -webkit-box-shadow: -2px 117px 33px -31px rgba(0, 0, 0, 0.14);
+  /* -webkit-box-shadow: -2px 117px 33px -31px rgba(0, 0, 0, 0.14);
   -moz-box-shadow: -2px 117px 33px -31px rgba(0, 0, 0, 0.14);
-  box-shadow: -2px 117px 33px -31px rgba(0, 0, 0, 0.14);
-}
-
-.title1 {
-  grid-area: 9/5/11/7;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  z-index: 1;
-  /* border: 1px solid red; */
-  /* transform: translateX(100px);
-  transition: transform .5s cubic-bezier(0.680, -0.550, 0.265, 1.550); */
-}
-
-.title1 h1 {
-  color: #f7f7f7;
-  font-size: 60px;
-}
-
-.transform1 {
-  transform: translateX(0px);
-  transition: transform .5s cubic-bezier(0.680, -0.550, 0.265, 1.550);
-}
-
-.title2 {
-  grid-area: 10/7/12/13;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 40px;
-  /* border: 1px solid red; */
-  /* transform: translateX(-550px);
-  transition: transform .5s cubic-bezier(0.680, -0.550, 0.265, 1.550); */
-}
-
-.title2 h1 {
-  color: #EA9215;
-  font-weight: normal;
-}
-
-.transform2 {
-  transform: translateX(0px);
-  transition: transform .5s cubic-bezier(0.680, -0.550, 0.265, 1.550);
-  ;
+  box-shadow: -2px 117px 33px -31px rgba(0, 0, 0, 0.14); */
 }
 
 /* content */
 
-.content-head {
+.about {
+  grid-area: 2/1/3/2;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50vw;
-  margin: 100px auto auto;
-  /* border: 1px solid red; */
-}
-
-.content-head::before {
-  content: '';
-  display: block;
-  width: 75vw;
-  height: 1px;
-  background-color: #323643;
-}
-
-.about {
-  display: grid;
-  height: 80vh;
+  height: 100%;
   width: 100%;
-  grid-template: repeat(6, 1fr)/repeat(6, 1fr);
-  margin: 0 auto;
-  background-color: ;
-  z-index: 1;
-  /* border: 1px solid red; */
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #3A4750;
+  /* border: 1px solid yellow; */
 }
 
 .about h1 {
-  margin: 100px auto 25px;
-  letter-spacing: 3px;
+  margin-top: 100px;
 }
 
 .about p {
-  display: inline-block;
-  width: 300px;
-  font-family: ;
+  width: 350px;
   line-height: 150%;
   letter-spacing: 1px;
+  word-spacing: 2px;
   margin: 0 auto;
+  color: #f7f7f7;
+  font-size: 18px;
+  font-weight: lighter;
 }
 
-.aboutbox {
+/* .aboutbox {
   grid-area: 1/2/5/4;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(50, 50, 50, .5);
+  background-color: rgba(50, 50, 50, .8);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   -webkit-clip-path: polygon(0 0%, 100% 2%, 100% 98%, 0 100%);
   clip-path: polygon(0 0, 100% 2%, 100% 98%, 0 100%);
-}
+  border-radius: 4px;
+} */
 
 .bg-box3 {
-  grid-area: 2/3/6/6;
   background: url('../background1.jpg') no-repeat center center fixed;
   background-size: cover;
   z-index: -1;
+  -webkit-clip-path: polygon(0 3%, 100% 0, 100% 100%, 0 97%);
+  clip-path: polygon(0 3%, 100% 0, 100% 100%, 0 97%);
+  border-radius: 4px;
 }
 
 .projects {
-  display: flex;
+  grid-area: 3/1/4/2;
+  /* display: flex;
   justify-content: center;
   height: 100vh;
-  width: 100%;
-  background-color: #EA9215;
-  -webkit-clip-path: polygon(0 3%, 100% 0, 100% 100%, 0 97%);
-  clip-path: polygon(0 3%, 100% 0, 100% 100%, 0 97%);
+  /* width: 100%; */
+  background-color: rgba(234, 146, 21, 1);
+  /* -webkit-clip-path: polygon(0 3%, 100% 0, 100% 100%, 0 97%);
+  clip-path: polygon(0 3%, 100% 0, 100% 100%, 0 97%);*/
 }
 
 footer {
-  display: flex;
-  height: 80vh;
-  width: 100%;
   background-color: #3A4750;
-}
-
-.codepen {
-  margin: 250px auto auto;
-  width: 500px;
-  height: 500px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  resize: both;
-}
-
-iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
