--- a/styles.css
+++ b/styles.css
@@ -66,22 +66,24 @@ header {
   text-transform: uppercase;
   font-size: 40px;
   line-height: 80%;
-  text-align: left;
+  text-align: center;
+  margin-bottom: 20px;
   /* letter-spacing: 10px !important; */
 }
 
 .title {
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 30px;
   /* font-weight: bold; */
   /* color: #EA9215; */
-  text-align: right;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .dev {
   color: #EA9215;
   font-weight: normal;
-  font-size: 50px;
+  font-size: 28px;
 }
 
 .pic {
@@ -173,6 +175,7 @@ header {
   font-size: 22px;
   line-height: 80%;
   text-align: center;
+  font-weight: lighter;
 }
 
 .one a:hover {
@@ -203,21 +206,21 @@ form {
 }
 
 input[type="text"] {
-  width: 150px;
-  height: 25px;
+  width: 200px;
+  height: 50px;
   border: 1px solid #FF6D24;
   border-radius: 5px;
-  margin: 2px auto;
+  margin: 5px auto;
   letter-spacing: 1px;
   /* text-align: center; */
 }
 
 input[type="email"] {
-  width: 150px;
-  height: 25px;
+  width: 200px;
+  height: 50px;
   border: 1px solid #FF6D24;
   border-radius: 5px;
-  margin: 2px auto;
+  margin: 5px auto;
   letter-spacing: 1px;
   /* text-align: center; */
 }
