--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   grid-gap: 5px; */
   margin: 0 auto;
   padding: 0;
-  /* background-color: #f7f7f7; */
+  background-color: #f7f7f7;
   /* background-color: #CAC8C9; */
   font-family: helvetica;
 }
@@ -51,16 +51,19 @@ header {
   margin-top: 50px;
 }
 
-/* .bg {
-  height: 500px;
+.bg {
   position: absolute;
-  width: 80%;
-  background: url('background3.jpg') no-repeat center fixed;
-  background-size: cover;
   z-index: -1;
-  border: 1px solid red;
-  top: -100px;
-} */
+  top: 0;
+  width: 300px;
+  height: 300px;
+  background: url('bg5.jpg') no-repeat center;
+  background-size: cover;
+  border-radius: 5px;
+  -webkit-box-shadow: 66px 77px 40px -39px rgba(0, 0, 0, 0.17);
+  -moz-box-shadow: 66px 77px 40px -39px rgba(0, 0, 0, 0.17);
+  box-shadow: 66px 77px 40px -39px rgba(0, 0, 0, 0.17);
+}
 
 .name {
   color: #3A4750;
@@ -78,7 +81,8 @@ header {
   /* font-weight: bold; */
   /* color: #EA9215; */
   text-align: center;
-  margin-top: 20px;
+  margin-top: 30px;
+  margin-bottom: 50px;
 }
 
 .dev {
@@ -91,13 +95,6 @@ header {
   width: 300px;
   height: auto;
   margin-bottom: -35px;
-  /* object-position: center;
-  object-fit: cover;
-  border-radius: 50%; */
-  /* border: 1px solid #323643; */
-  /* -webkit-box-shadow: -2px 117px 33px -31px rgba(0, 0, 0, 0.14);
-  -moz-box-shadow: -2px 117px 33px -31px rgba(0, 0, 0, 0.14);
-  box-shadow: -2px 117px 33px -31px rgba(0, 0, 0, 0.14); */
 }
 
 /* content */
@@ -135,7 +132,8 @@ header {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: rgba(234, 146, 21, 1);
+  background: rgb(234, 114, 21);
+  background: linear-gradient(79deg, rgba(234, 114, 21, 1) 0%, rgba(234, 171, 21, 1) 100%);
   align-items: center;
   justify-content: center;
   margin: 0 auto;
@@ -156,6 +154,7 @@ header {
 
 .item {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: gray;
@@ -182,6 +181,35 @@ header {
 
 .one a:hover {
   color: #EA9215;
+}
+
+.rps h3 {
+  color: #f7f7f7;
+  font-weight: lighter;
+}
+
+.rpsIcons {
+  margin: 50px auto;
+}
+
+.far {
+  margin: 0 20px;
+  color: black;
+  font-size: 40px;
+  transform: rotate(90deg);
+}
+
+@keyframes rockDown {
+  from {
+    transform: rotate(75deg);
+  }
+  to {
+    transform: translateY(25px) rotate(95deg);
+  }
+}
+
+.pcPlayerAnimate {
+  animation: rockDown .45s 3 forwards ease-in;
 }
 
 footer {
@@ -251,7 +279,6 @@ textarea {
 }
 
 #contactsubmit:hover {
-  /* border: 2px solid #FF6D24; */
   font-size: 15px;
 }
 
