--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ header {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   text-align: center;
   margin-top: 50px;
@@ -77,6 +77,7 @@ header {
   text-align: center;
   margin: 25px auto 0;
   /* letter-spacing: 10px !important; */
+  /* border: 1px solid red; */
 }
 
 .title {
@@ -85,7 +86,7 @@ header {
   /* font-weight: bold; */
   /* color: #EA9215; */
   text-align: center;
-  margin-top: 75px;
+  margin-top: 25px;
 }
 
 .dev {
@@ -98,7 +99,7 @@ header {
   width: 300px;
   height: auto;
   margin-bottom: -35px;
-  margin-top: 250px;
+  /* margin-top: 250px; */
   z-index: 2;
 }
 
