--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ nav a {
   color: #323232;
   padding: 10px 5px;
   letter-spacing: 3px;
-  margin: 10px 75px;
+  margin: 10px 7vw;
   border: 1px solid transparent;
   font-weight: lighter;
 }
@@ -299,7 +299,7 @@ i {
     text-decoration: none;
     letter-spacing: 1px;
     padding: 5px 5px;
-    margin: 10px 18px;
+    margin: 10px 5vw;
   }
   .projectsflex {
     display: grid;
