--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ header {
 .projectsflex {
   display: grid;
   grid-template: repeat(2, 1fr)/repeat(2, 1fr);
-  /* border: 1px solid red; */
+  grid-gap: 3px;
 }
 
 .item {
@@ -148,7 +148,6 @@ header {
   background-color: gray;
   height: 500px;
   width: 100%;
-  border: 3px solid #f7f7f7;
 }
 
 .one {
@@ -304,5 +303,6 @@ i {
   .projectsflex {
     display: grid;
     grid-template: repeat(4, 1fr)/ 1fr;
+    grid-gap: 3px;
   }
 }
