--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background-color: #63A6B8;
+  background-color: #D72323;
   border: none;
   border-radius: 3px;
   font-size: 16px;
@@ -294,11 +294,11 @@ i {
 
 @media screen and (max-width: 768px) {
   nav a {
-    font-size: 15px;
+    font-size: 18px;
     text-decoration: none;
     letter-spacing: 1px;
     padding: 5px 5px;
-    margin: 10px 5vw;
+    margin: 10px 4vw;
   }
   .projectsflex {
     display: grid;
