--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,8 @@
 body {
   display: grid;
-  /* grid-template: repeat(4, 70vh)/repeat(1, 100vw);
-  grid-gap: 5px; */
   margin: 0 auto;
   padding: 0;
   background-color: #eeeeee;
-  /* background-color: #CAC8C9; */
   font-family: helvetica;
 }
 
@@ -26,7 +23,7 @@ nav {
 
 nav a {
   text-decoration: none;
-  color: #323232;
+  color: #212623;
   padding: 10px 5px;
   letter-spacing: 3px;
   margin: 10px 7vw;
@@ -180,7 +177,7 @@ footer {
 
 footer h1 {
   margin: 75px 50px 0;
-  color: #eeeeee;
+  color: #323232;
 }
 
 .messageme {
@@ -251,18 +248,19 @@ textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background-color: #D72323;
-  border: none;
-  border-radius: 3px;
-  font-size: 16px;
-  letter-spacing: 3px;
+  width: 200px;
   height: 50px;
-  width: 100px;
-  color: #eeeeee;
+  border: 2px solid #D72323;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #D72323;
+  font-size: 20px;
+  font-weight: normal;
+  letter-spacing: 3px;
 }
 
 #contactsubmit:hover {
-  font-size: 15px;
+  background-color: #eeeeee;
 }
 
 .contactsection {
@@ -283,7 +281,7 @@ textarea {
   align-items: center;
   width: 100%;
   height: 100px;
-  background-color: #494541;
+  background-color: #181F22;
 }
 
 i {
@@ -294,11 +292,11 @@ i {
 
 @media screen and (max-width: 768px) {
   nav a {
-    font-size: 18px;
+    font-size: 15px;
     text-decoration: none;
     letter-spacing: 1px;
     padding: 5px 5px;
-    margin: 10px 4vw;
+    margin: 10px 3vw;
   }
   .projectsflex {
     display: grid;
