--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ nav {
 
 nav a {
   text-decoration: none;
-  color: #212623;
+  color: #181F22;
   padding: 10px 5px;
   letter-spacing: 3px;
   margin: 10px 7vw;
@@ -51,7 +51,7 @@ header {
 }
 
 .name {
-  color: #323232;
+  color: #181F22;
   text-transform: uppercase;
   font-size: 40px;
   line-height: 80%;
@@ -87,7 +87,7 @@ header {
   width: 100%;
   justify-content: flex-start;
   align-items: center;
-  background-color: #212623;
+  background-color: #181F22;
   text-align: center;
 }
 
@@ -154,7 +154,7 @@ footer {
 
 footer h1 {
   margin: 75px 50px 0;
-  color: #323232;
+  color: #181F22;
 }
 
 .messageme {
