--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,21 @@ header {
   overflow: hidden;
 }
 
+.red-box {
+  position: absolute;
+  display: flex;
+  width: 60%;
+  height: 35vw;
+  left: auto;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  background: rgb(215, 35, 35);
+  background: linear-gradient(150deg, rgba(215, 35, 35, 1) 0%, rgba(79, 5, 0, 1) 100%);
+  -webkit-clip-path: polygon(100% 39%, 0% 100%, 100% 100%);
+  clip-path: polygon(100% 27%, 0% 100%, 100% 100%);
+}
+
 .name {
   color: #181F22;
   text-transform: uppercase;
@@ -152,7 +167,7 @@ footer {
   width: 100%;
 }
 
-footer h1 {
+.contactsection h1 {
   margin: 75px 50px 0;
   color: #181F22;
 }
@@ -164,13 +179,13 @@ footer h1 {
   width: 200px;
   height: 50px;
   border: 2px solid #D72323;
-  border-radius: 10px;
+  border-radius: 5px;
   text-decoration: none;
   color: #D72323;
   font-size: 20px;
   font-weight: normal;
   letter-spacing: 3px;
-  margin-top: 175px;
+  margin-top: 50px;
 }
 
 .messageme:hover {
@@ -187,7 +202,8 @@ form {
   background-color: rgba(100, 100, 100, 0.5);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  border-radius: 10px;
+  border-radius: 5px;
+  width: 250px;
 }
 
 .hide {
@@ -195,29 +211,28 @@ form {
 }
 
 input[type="text"] {
-  width: 300px;
+  width: 100%;
   height: 50px;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 5px auto;
   letter-spacing: 1px;
   /* text-align: center; */
 }
 
 input[type="email"] {
-  width: 300px;
+  width: 100%;
   height: 50px;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 5px auto;
   letter-spacing: 1px;
-  /* text-align: center; */
 }
 
 textarea {
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 15px auto;
-  width: 300px;
+  width: 100%;
   height: 150px;
   border: none;
 }
@@ -226,10 +241,10 @@ textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: 200px;
+  width: 100px;
   height: 50px;
-  border: 2px solid #D72323;
-  border-radius: 10px;
+  border: 1px solid #D72323;
+  border-radius: 5px;
   text-decoration: none;
   color: #D72323;
   font-size: 20px;
@@ -242,14 +257,14 @@ textarea {
 }
 
 .contactsection {
-  background: url('bg5.jpg') no-repeat center;
+  background: url('bg5.jpg') no-repeat center fixed;
   background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  height: 800px;
+  height: 700px;
   width: 100%;
 }
 
