--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header {
 .red-box {
   position: absolute;
   display: flex;
-  width: 60%;
+  width: 55%;
   height: 35vw;
   left: auto;
   right: 0;
@@ -98,7 +98,7 @@ header {
 .about {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 500px;
   width: 100%;
   justify-content: flex-start;
   align-items: center;
