--- a/styles.css
+++ b/styles.css
@@ -27,14 +27,14 @@ nav a {
   padding: 10px 5px;
   letter-spacing: 3px;
   margin: 10px 7vw;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   font-weight: lighter;
 }
 
 nav a:hover {
-  color: #D72323;
-  border: 1px solid #D72323;
-  border-radius: 10px;
+  border-bottom: 2px solid rgb(215, 35, 35);
+  border-top: 2px solid rgb(215, 35, 35);
+  border-radius: 15px;
 }
 
 /* Header */
@@ -59,8 +59,10 @@ header {
   right: 0;
   bottom: 0;
   margin: 0 auto;
-  background: rgb(215, 35, 35);
-  background: linear-gradient(150deg, rgba(215, 35, 35, 1) 0%, rgba(79, 5, 0, 1) 100%);
+  background: url('kayakbg.jpg') center fixed;
+  background-size: cover;
+  /* background: rgb(215, 35, 35);
+  background: linear-gradient(150deg, rgba(215, 35, 35, 1) 0%, rgba(79, 5, 0, 1) 100%); */
   -webkit-clip-path: polygon(100% 39%, 0% 100%, 100% 100%);
   clip-path: polygon(100% 27%, 0% 100%, 100% 100%);
 }
@@ -82,7 +84,7 @@ header {
 
 .dev {
   color: #D72323;
-  font-weight: normal;
+  font-weight: lighter;
   font-size: 28px;
 }
 
@@ -98,7 +100,7 @@ header {
 .about {
   display: flex;
   flex-direction: column;
-  height: 500px;
+  height: 100%;
   width: 100%;
   justify-content: flex-start;
   align-items: center;
@@ -107,7 +109,7 @@ header {
 }
 
 .about h1 {
-  margin-top: 100px;
+  margin-top: 50px;
   margin-bottom: 0;
   color: #eeeeee;
 }
@@ -158,38 +160,40 @@ header {
   color: #D72323;
 }
 
-footer {
+.contactsection {
+  /* background: url('bg5.jpg') no-repeat center fixed;
+  background-size: cover; */
+  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   text-align: center;
+  height: 100%;
   width: 100%;
 }
 
-.contactsection h1 {
-  margin: 75px 50px 0;
-  color: #181F22;
-}
-
-.messageme {
+.section-title {
+  position: relative;
   display: flex;
+  width: 100%;
+  height: 300px;
+  background: url('kayakbg.jpg') center fixed;
+  background-size: cover;
   justify-content: center;
   align-items: center;
-  width: 200px;
-  height: 50px;
-  border: 2px solid #D72323;
-  border-radius: 5px;
-  text-decoration: none;
-  color: #D72323;
-  font-size: 20px;
-  font-weight: normal;
-  letter-spacing: 3px;
-  margin-top: 50px;
 }
 
-.messageme:hover {
-  background-color: #eeeeee;
+.filter {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(100, 100, 100, 0.5);
+}
+
+.section-title h1 {
+  font-size: 40px;
+  letter-spacing: 3px;
+  color: #eeeeee;
+  z-index: 2;
 }
 
 form {
@@ -197,44 +201,42 @@ form {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px 30px;
+  padding: 10px;
   margin: 75px auto;
-  background-color: rgba(100, 100, 100, 0.5);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
   border-radius: 5px;
-  width: 250px;
+  width: 50%;
+  /* border: 1px solid red; */
 }
 
-.hide {
-  display: none;
-}
-
-input[type="text"] {
+.form-input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* border: 1px solid red; */
   width: 100%;
   height: 50px;
-  border: none;
-  border-radius: 5px;
-  margin: 5px auto;
-  letter-spacing: 1px;
   /* text-align: center; */
 }
 
-input[type="email"] {
-  width: 100%;
-  height: 50px;
-  border: none;
-  border-radius: 5px;
-  margin: 5px auto;
+.form-input input {
+  width: 49%;
+  height: 100%;
+  border: 1px solid lightgray;
+  border-radius: 2px;
   letter-spacing: 1px;
+  font-size: 15px;
+  font-weight: lighter;
 }
 
-textarea {
-  border-radius: 5px;
-  margin: 15px auto;
+.form-text {
   width: 100%;
-  height: 150px;
-  border: none;
+  height: 50px;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  letter-spacing: 1px;
+  font-size: 15px;
+  font-weight: lighter;
+  margin: 5px auto;
 }
 
 #contactsubmit {
@@ -250,21 +252,20 @@ textarea {
   font-size: 20px;
   font-weight: normal;
   letter-spacing: 3px;
+  background-color: transparent;
 }
 
 #contactsubmit:hover {
-  background-color: #eeeeee;
+  background-color: #D72323;
+  color: #eee;
 }
 
-.contactsection {
-  background: url('bg5.jpg') no-repeat center fixed;
-  background-size: cover;
+footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  height: 700px;
   width: 100%;
 }
 
@@ -279,7 +280,7 @@ textarea {
 
 i {
   color: #eeeeee;
-  margin: 0;
+  margin: 0 auto;
   padding: 0 25px;
 }
 
