--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@ header {
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: center;
   height: 100%;
   width: 100%;
 }
@@ -204,7 +205,7 @@ form {
   padding: 10px;
   margin: 75px auto;
   border-radius: 5px;
-  width: 50%;
+  width: 60%;
   /* border: 1px solid red; */
 }
 
@@ -296,5 +297,15 @@ i {
     display: grid;
     grid-template: repeat(4, 1fr)/ 1fr;
     grid-gap: 3px;
+  }
+  .section-title {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 300px;
+    background: url('kayakbg.jpg') center;
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
   }
 }
