--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-  display: grid;
   margin: 0 auto;
   padding: 0;
   background-color: #eeeeee;
@@ -24,17 +23,16 @@ nav {
 nav a {
   text-decoration: none;
   color: #181F22;
-  padding: 10px 5px;
+  padding: 15px 5px;
   letter-spacing: 3px;
-  margin: 10px 7vw;
+  margin: 0 7vw;
   border: 2px solid transparent;
   font-weight: lighter;
 }
 
 nav a:hover {
-  border-bottom: 2px solid rgb(215, 35, 35);
-  border-top: 2px solid rgb(215, 35, 35);
-  border-radius: 15px;
+  border-bottom: 2px groove rgb(215, 35, 35);
+  /* border-top: 1px solid rgb(215, 35, 35); */
 }
 
 /* Header */
@@ -160,7 +158,7 @@ header {
   color: #D72323;
 }
 
-.contactsection {
+.contact-section {
   /* background: url('bg5.jpg') no-repeat center fixed;
   background-size: cover; */
   position: relative;
@@ -187,7 +185,7 @@ header {
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: rgba(100, 100, 100, 0.5);
+  background-color: rgba(100, 100, 100, 0.7);
 }
 
 .section-title h1 {
@@ -197,37 +195,22 @@ header {
   z-index: 2;
 }
 
-form {
+.form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10px;
   margin: 75px auto;
   border-radius: 5px;
   width: 60%;
   /* border: 1px solid red; */
 }
 
-.form-input {
+.input {
   display: flex;
   justify-content: space-between;
-  -webkit-justify-content: space-between;
-  align-items: center;
-  /* border: 1px solid red; */
   width: 100%;
   height: 50px;
-  /* text-align: center; */
-}
-
-.form-input input {
-  width: 49%;
-  height: 100%;
-  border: 1px solid lightgray;
-  border-radius: 2px;
-  letter-spacing: 1px;
-  font-size: 15px;
-  font-weight: lighter;
 }
 
 .form-text {
@@ -292,8 +275,8 @@ i {
     font-size: 15px;
     text-decoration: none;
     letter-spacing: 1px;
-    padding: 5px 5px;
-    margin: 10px 3vw;
+    padding: 15px 5px;
+    margin: 0 3vw;
   }
   .projectsflex {
     display: grid;
