--- a/css/styles.css
+++ b/css/styles.css
@@ -358,6 +358,7 @@ i {
     display: grid;
     grid-template: repeat(4, 1fr)/ 1fr;
     grid-gap: 25px;
+    margin: 0;
   }
   .section-title {
     position: relative;
