--- a/css/styles.css
+++ b/css/styles.css
@@ -227,20 +227,6 @@ header {
   color: #D72323;
 }
 
-.contact-section {
-  /* background: url('bg5.jpg') no-repeat center fixed;
-  background-size: cover; */
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: center;
-  width: 100%;
-  height: 500px;
-  background-color: #eee;
-  border: 1px solid red;
-}
-
 .section-title {
   display: flex;
   flex-direction: column;
@@ -267,14 +253,27 @@ header {
   z-index: 3;
 }
 
-.form-container {
+.contact-section {
+  /* background: url('bg5.jpg') no-repeat center fixed;
+  background-size: cover; */
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  height: 500px;
+  background-color: #eee;
+  border: 1px solid red;
+}
+
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 25px auto;
   border-radius: 5px;
-  width: 60%;
+  width: 50%;
   text-align: center;
   /* border: 1px solid red; */
 }
