--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,13 @@ form {
   height: 50px;
 }
 
-.input-container input {
+.input-container input[type="text"] {
+  border: 1px solid lightgray;
+  height: 100%;
+  width: 48%;
+}
+
+.input-container input[type="email"] {
   border: 1px solid lightgray;
   height: 100%;
   width: 48%;
@@ -365,15 +371,5 @@ i {
     grid-template: repeat(4, 1fr)/ 1fr;
     grid-gap: 25px;
     margin: 0;
-  }
-  .section-title {
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 300px;
-    background: url('../kayakbg.jpg') center;
-    background-size: cover;
-    justify-content: center;
-    align-items: center;
   }
 }
