--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,7 @@ form {
 .input-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: space-between;
   width: 100%;
   height: 50px;
 }
