--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,7 @@ form {
 .input-container {
   display: flex;
   justify-content: space-between;
-  align-items: space-between;
+  align-items: center;
   width: 100%;
   height: 50px;
 }
@@ -289,13 +289,13 @@ form {
 .input-container input[type="text"] {
   border: 1px solid lightgray;
   height: 100%;
-  width: 48%;
+  width: 50%;
 }
 
 .input-container input[type="email"] {
   border: 1px solid lightgray;
   height: 100%;
-  width: 48%;
+  width: 50%;
 }
 
 .form-text {
