--- a/css/styles.css
+++ b/css/styles.css
@@ -280,7 +280,7 @@ form {
 
 .input-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 50px;
