--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ form {
   justify-content: center;
   margin: 25px auto;
   border-radius: 5px;
-  width: 50%;
+  width: 250px;
   text-align: center;
   /* border: 1px solid red; */
 }
