--- a/css/styles.css
+++ b/css/styles.css
@@ -286,18 +286,13 @@ form {
   height: 50px;
 }
 
-.input-container input[type="text"] {
+.input-container input {
   border: 1px solid lightgray;
   height: 100%;
   width: 50%;
   border-radius: 2px;
-}
-
-.input-container input[type="email"] {
-  border: 1px solid lightgray;
-  height: 100%;
-  width: 50%;
-  border-radius: 2px;
+  padding: 0;
+  margin: 0;
 }
 
 .form-text {
