--- a/css/styles.css
+++ b/css/styles.css
@@ -107,30 +107,32 @@ header {
 
 .about {
   display: flex;
-  flex-direction: column;
+  min-height: 70vh;
   max-width: 980px;
   justify-content: flex-start;
   align-items: center;
   background-color: #eee;
-  text-align: center;
   margin: 0 auto;
+  flex-wrap: wrap;
+  /* border: 1px solid red; */
 }
 
-.about h1 {
-  margin-top: 50px;
-  margin-bottom: 0;
-  color: #181F22;
+.aboutme {
+  display: flex;
+  max-width: 50%;
+  padding: 0 10px;
+  margin: 0 auto;
 }
 
 .about p {
   line-height: 150%;
   letter-spacing: 0px;
   word-spacing: 1px;
-  margin: 50px auto 100px;
-  padding: 0 15vw;
+  margin: 50px auto 50px;
   color: #181F22;
   font-size: 18px;
   font-weight: lighter;
+  text-align: justify;
 }
 
 .specialty {
@@ -140,6 +142,7 @@ header {
   max-width: 980px;
   margin: 0 auto 50px;
   text-align: center;
+  /* border: 1px solid red; */
 }
 
 .specialty div {
@@ -147,10 +150,7 @@ header {
   justify-content: center;
   align-items: center;
   height: 40px;
-  background: rgb(170, 48, 48);
-  background: linear-gradient(90deg, rgba(170, 48, 48, 1) 0%, rgba(196, 154, 31, 1) 26%, rgba(116, 153, 15, 1) 58%, rgba(39, 153, 0, 1) 100%);
-  /* background: rgb(215, 99, 90);
-  background: linear-gradient(150deg, rgba(215, 99, 90, 0.0578606442577031) 0%, rgba(207, 0, 0, 1) 100%); */
+  background-color: #4E9907;
   color: #eee;
   margin-top: 0;
   border-radius: 2px;
@@ -347,8 +347,12 @@ footer {
 
 i {
   color: #eeeeee;
-  margin: 0 auto;
-  padding: 0 25px;
+  margin: 0 25px;
+  padding: 0 0;
+}
+
+.social i:hover {
+  color: red;
 }
 
 @media screen and (max-width: 768px) {
