--- a/css/styles.css
+++ b/css/styles.css
@@ -399,4 +399,14 @@ i {
     grid-gap: 25px;
     margin: 0;
   }
+  .section-title {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    background: url('../bg10.jpg') no-repeat center;
+    background-size: cover;
+  }
 }
