--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 500px;
+  height: 50vw;
   width: 100%;
   border-radius: 2px;
   overflow: hidden;
@@ -393,13 +393,19 @@ i {
     text-align: center;
     /* border: 1px solid red; */
   }
+  .projectsflex {
+    display: grid;
+    grid-template: repeat(2, 1fr)/repeat(2, 1fr);
+    grid-gap: 0;
+    margin: 5px auto;
+  }
   .item {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 25vh;
-    width: 100%;
+    height: 50vw;
+    width: 50vw;
     border-radius: 2px;
     overflow: hidden;
   }
