--- a/css/styles.css
+++ b/css/styles.css
@@ -396,8 +396,8 @@ i {
   .projectsflex {
     display: grid;
     grid-template: repeat(2, 1fr)/repeat(2, 1fr);
-    grid-gap: 0;
-    margin: 5px auto;
+    grid-gap: 7px;
+    margin: 7px auto;
   }
   .item {
     display: flex;
@@ -405,8 +405,7 @@ i {
     justify-content: center;
     align-items: center;
     height: 50vw;
-    width: 50vw;
-    border-radius: 2px;
+    width: 100%;
     overflow: hidden;
   }
   .section-title {
