--- a/css/styles.css
+++ b/css/styles.css
@@ -113,11 +113,13 @@ header {
   align-items: center;
   margin: 0;
   padding: 0;
-  border-top: 2px solid #D72323;
+  background-color: #181F22;
+  /* border-top: 2px solid #D72323; */
 }
 
 #about h1 {
-  margin: 50px auto 0;
+  color: #eee;
+  margin: 25px auto 25px;
   padding: 0;
 }
 
@@ -128,8 +130,9 @@ header {
   justify-content: flex-start;
   align-items: center;
   background-color: #eee;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   flex-wrap: wrap;
+  border-radius: 3px;
   /* border: 1px solid red; */
 }
 
@@ -209,8 +212,8 @@ header {
 .projectsflex {
   display: grid;
   grid-template: repeat(2, 1fr)/repeat(2, 1fr);
-  grid-gap: 25px;
-  margin: 25px;
+  grid-gap: 10px;
+  margin: 10px;
 }
 
 .item {
@@ -279,7 +282,7 @@ header {
   width: 100%;
   height: 500px;
   background-color: #eee;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 form {
