--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ header {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   text-align: center;
   margin-top: 50px;
@@ -50,28 +50,12 @@ header {
   height: 60vh;
 }
 
-.red-box {
-  position: absolute;
-  display: flex;
-  width: 55%;
-  height: 35vw;
-  left: auto;
-  right: 0;
-  bottom: 0;
-  margin: 0 auto;
-  background: url('../kayakbg.jpg') center fixed;
-  background-size: cover;
-  /* background: rgb(215, 35, 35);
-  background: linear-gradient(150deg, rgba(215, 35, 35, 1) 0%, rgba(79, 5, 0, 1) 100%); */
-  -webkit-clip-path: polygon(100% 39%, 0% 100%, 100% 100%);
-  clip-path: polygon(100% 27%, 0% 100%, 100% 100%);
-}
-
 .name-box {
   display: flex;
   flex-direction: column;
   border: 3px groove rgb(215, 35, 35);
   box-shadow: 0px 2px 20px lightgray;
+  margin-top: 5px;
 }
 
 .name {
