--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,8 @@ header {
   margin: 0;
   padding: 0;
   background-color: #181F22;
+  background: url('../bg10.jpg') no-repeat center fixed;
+  background-size: cover;
   /* border-top: 2px solid #D72323; */
 }
 
@@ -114,7 +116,7 @@ header {
   justify-content: flex-start;
   align-items: center;
   background-color: #eee;
-  margin: 0 auto 50px;
+  margin: 0 auto;
   flex-wrap: wrap;
   border-radius: 3px;
   /* border: 1px solid red; */
@@ -361,6 +363,17 @@ i {
     letter-spacing: 1px;
     padding: 15px 5px;
     margin: 0 3vw;
+  }
+  #about {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    background: #181F22;
+    /* border-top: 2px solid #D72323; */
   }
   .aboutme {
     display: flex;
