--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ header {
   flex-direction: column;
   width: 100%;
   height: 200px;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   background: url('../bg10.jpg') no-repeat center fixed;
   background-size: cover;
@@ -251,7 +251,6 @@ header {
 }
 
 .section-title h1 {
-  position: absolute;
   font-size: 40px;
   letter-spacing: 3px;
   color: #eee;
