--- a/css/styles.css
+++ b/css/styles.css
@@ -409,7 +409,7 @@ i {
     flex-direction: column;
     width: 100%;
     height: 200px;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     background: url('../bg10.jpg') no-repeat center;
     background-size: cover;
