--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  max-width: 980px;
+  min-width: 40%;
   margin: 0 auto 50px;
   text-align: center;
   /* border: 1px solid red; */
@@ -168,12 +168,13 @@ header {
 
 .specialty h4 {
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: 25px;
   line-height: 27px;
-  letter-spacing: 10px;
+  letter-spacing: 6px;
   font-size: 15px;
   font-weight: lighter;
   color: color: #181F22;
+  text-align: left;
   /* border: 1px solid red; */
 }
 
