--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,21 @@ header {
   height: 50vh;
 }
 
+.gradient-box {
+  display: flex;
+  background: url('../bg10.jpg') no-repeat;
+  background-size: cover;
+  border-radius: 2px;
+  margin-top: 10px;
+}
+
 .name-box {
   display: flex;
   flex-direction: column;
-  border: 3px groove rgb(215, 35, 35);
-  box-shadow: 0px 2px 20px lightgray;
-  margin-top: 5px;
+  z-index: 3;
+  background-color: #eee;
+  margin: 10px;
+  padding: 10px;
 }
 
 .name {
@@ -74,7 +83,7 @@ header {
 }
 
 .dev {
-  color: #D72323;
+  color: #D05F47;
   font-weight: lighter;
   font-size: 28px;
 }
@@ -202,9 +211,10 @@ header {
 
 .projectsflex {
   display: grid;
+  max-width: 980px;
   grid-template: repeat(2, 1fr)/repeat(2, 1fr);
-  grid-gap: 10px;
-  margin: 10px;
+  grid-gap: 25px;
+  margin: 25px auto 0;
 }
 
 .item {
@@ -212,7 +222,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50vw;
+  height: 50vh;
   width: 100%;
   border-radius: 2px;
   overflow: hidden;
