--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ header {
   height: 200px;
   justify-content: flex-end;
   align-items: center;
-  background: url('../bg10.jpg') no-repeat center fixed;
+  background: url('../partialbg.jpeg') no-repeat center fixed;
   background-size: cover;
 }
 
@@ -267,7 +267,6 @@ header {
 }
 
 .section-title h1 {
-  font-size: 40px;
   letter-spacing: 3px;
   color: #eee;
   z-index: 3;
@@ -293,9 +292,9 @@ form {
   justify-content: center;
   margin: 25px auto;
   border-radius: 5px;
-  width: 250px;
+  max-width: 500px;
   text-align: center;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 
 .input-container {
@@ -424,10 +423,10 @@ i {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 200px;
+    height: 100px;
     justify-content: flex-end;
     align-items: center;
-    background: url('../bg10.jpg') no-repeat center;
+    background: url('../partialbg.jpeg') no-repeat center;
     background-size: cover;
   }
 }
