--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ header {
   background-color: #eee;
   margin: 10px;
   padding: 10px;
+  border-radius: 2px;
 }
 
 .name {
@@ -106,7 +107,6 @@ header {
   align-items: center;
   margin: 0;
   padding: 0;
-  background-color: #181F22;
   background: url('../bg10.jpg') no-repeat center fixed;
   background-size: cover;
   /* border-top: 2px solid #D72323; */
@@ -252,7 +252,7 @@ header {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 200px;
+  height: 100px;
   justify-content: flex-end;
   align-items: center;
   background: url('../partialbg.jpeg') no-repeat center fixed;
@@ -267,7 +267,7 @@ header {
 }
 
 .section-title h1 {
-  letter-spacing: 3px;
+  letter-spacing: 6px;
   color: #eee;
   z-index: 3;
 }
@@ -378,6 +378,9 @@ i {
     padding: 15px 5px;
     margin: 0 3vw;
   }
+  .pic {
+    display: none;
+  }
   #about {
     display: flex;
     flex-direction: column;
@@ -386,7 +389,9 @@ i {
     align-items: center;
     margin: 0;
     padding: 0;
-    background: #181F22;
+    /* background: #181F22; */
+    background: url('../partialbg.jpeg') no-repeat center;
+    background-size: cover;
     /* border-top: 2px solid #D72323; */
   }
   .aboutme {
